--- a/index.html
+++ b/index.html
@@ -1,47 +1,66 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>VdNote</title>
-    <meta name="description" content="VdNote a note taking app for videos.">
-    <link rel="shortcut icon" href="img/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400i,700,700i" rel="stylesheet" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/style.css" />
+    <title>vdNote</title>
+    <meta name="description" content="Share notable moments from Youtube videos with the world!" />
+    <meta name="twitter:card" value="summary">
+    <meta name="twitter:creator" content="@mosesfinlay">
+    <meta name="twitter:site" content="@vdnote">
+    <meta property="og:title" content="vdNote" />
+    <meta property="og:type" content="Web App" />
+    <meta property="og:url" content="http://vdnote.com/" />
+    <meta property="og:image" content="http://vdnote.com/img/vdnote.jpg" />
+    <meta property="og:description" content="Share notable moments from Youtube videos with the world!" />
     <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" href="img/logo.ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/animate/animate.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>    
+  <body>
     <div class="alertNotice"></div>
     <div class="container">
-      <div class="row">
+      <div class="row pt-4 pb-2">
+        <div class="col-md-12">
+          <h1 class="text-white font-weight-bold d-inline-block">vdNote</h1>
+          <p class="text-white font-weight-bold lead d-inline-block pl-1">share noteworthy moments from YouTube videos!</p>
+        </div>
         <div class="col-md-6 pt-3">
-          <div class="bg-white p-3 border rounded top">
+          <div class="bg-white p-4 shadow rounded">
             <div class="embed-responsive embed-responsive-16by9 bg-light iframe mb-3">
-              <h1 class="display-4 text-muted text-center font-weight-bold my-5 py-5">Video Here</h1>
-              <iframe class="embed-responsive-item video" id="video" src="https://www.youtube.com/embed/GrJELW3hqds?enablejsapi=1"></iframe>
+              <h1 class="display-4 text-muted text-center font-weight-bold my-5 py-5">vdNote</h1>
+              <iframe class="embed-responsive-item video animated rubberBand" id="video" src="https://www.youtube.com/embed/_38JDGnr0vA?enablejsapi=1"></iframe>
             </div>
-            <form class="URL">
-              <div class="form-group mb-0">
-                <input type="url" class="form-control outline-info my-2" placeholder="Enter Youtube URL">
-              </div>
+            <form class="input-group URL my-2">
+              <input type="url" class="form-control outline-info" placeholder="Enter Youtube URL">
+              <span class="input-group-btn">
+                <button class="btn btn-outline-info" type="submit">Enter</button>
+              </span>
             </form>
-            <form class="note">
-              <div class="form-group mb-0">
-                <input type="text" class="form-control outline-info form-control-lg my-2" placeholder="Enter Note">
-                <br />
-                <a href="" class="btn btn-lg btn-outline-info d-block email">Email Your Notes</a>
-              </div>
+            <form class="input-group note mt-2 mb-3">
+              <input type="text" class="form-control outline-info" placeholder="Enter Note">
+              <span class="input-group-btn">
+                <button class="btn btn-outline-info" type="submit">Enter</button>
+              </span>
             </form>
+            <a href="" class="btn btn-lg btn-outline-info d-block email">Email Your Notes</a>
           </div>
         </div>
         <div class="col-md-6 pt-3">
-          <div class="bg-white p-3 border rounded note-list">
-            <h1 class="text-dark text-center font-weight-bold">VdNote <p class="small text-info font-weight-normal">a note sharing app for videos</p></h1>
+          <div class="bg-white p-4 shadow rounded note-list text-center pt-3">
+            <h2 class="text-info d-inline-block m-0">Notes</h2>
             <hr>
             <ul class="list-group"></ul>
           </div>
         </div>
       </div>
     </div>
+    <footer class="text-right">
+      <div class="container">
+        <p class="lead text-white mr-3">made by <a class="font-weight-bold text-white" href="http://mosesfinlay.com">moses</a></p>
+      </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
@@ -50,5 +69,13 @@
     <script id="iframe-demo" src="https://www.youtube.com/iframe_api"></script>
     <script src="js/clipboard/clipboard.min.js"></script>
     <script src="js/app.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-108895600-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
